# AYED2025-2

./: CMakeLists.txt
00_pointers/: funciones.cpp  main.cpp
15_z_repaso_02/: main.cpp
99_ej/: CMakeLists.txt  binary_tree.cpp  double_list.cpp  list_base.cpp  list_base.hpp  lists.cpp  lists.hpp  main.cpp
99_ej/tests/: CMakeLists.txt  list_base_tests.cpp  list_tests.cpp  node_tests.cpp  queue_tests.cpp  stack_tests.cpp  tests.cpp  tests_old.cpp
